// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getFolders should be able to return the correct folders when method options are provided 1`] = `
Object {
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils getFolders should be able to return the correct folders when no method options are provided 1`] = `
Object {
  "actualFolder": "folderActual",
  "baselineFolder": "folderBase",
  "diffFolder": "folderDiff",
}
`;

exports[`utils getInstanceData should return instance data when all capabilities are provided 1`] = `
Object {
  "browserName": "chrome",
  "deviceName": "devicename",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "platformname",
}
`;

exports[`utils getInstanceData should return instance data when log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "deviceName": "",
  "logName": "logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "",
}
`;

exports[`utils getInstanceData should return instance data when the appium log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "deviceName": "",
  "logName": "appiumLogName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "",
}
`;

exports[`utils getInstanceData should return instance data when the minimum of capabilities is provided 1`] = `
Object {
  "browserName": "",
  "deviceName": "",
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "",
}
`;

exports[`utils getInstanceData should return instance data when the sauce log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "deviceName": "",
  "logName": "sauceLogName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "",
}
`;

exports[`utils getInstanceData should return instance data when wdio-ics option log name is provided 1`] = `
Object {
  "browserName": "chrome",
  "deviceName": "",
  "logName": "wdio-ics-logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "",
}
`;
